<resources>
    <string name="app_name">GD240 HD</string>
    <string name="company">ZH-JL</string>
    <string name="finish_app">Press again and sign out Application</string>
    <string name="main_low_power">Low battery power has stopped recording!</string>
    <string name="main_whitebalance_auto">auto</string>
    <string name="main_whitebalance_sunlight">sunlight</string>
    <string name="main_whitebalance_cloundy">cloundy</string>
    <string name="main_whitebalance_incandescent">incandescent</string>
    <string name="main_whitebalance_fluorescent">fluorescent</string>
    <string name="main_height_0">Height:0m</string>
    <string name="main_height">Height:</string>
    <string name="main_status_online">Status:Online</string>
    <string name="main_status_offline">Status:Offline</string>
    <string name="sensor_panel_settting">== Camara Setting ==</string>
    <string name="sensor_panel_brightness">Brightness</string>
    <string name="sensor_panel_contrast">Contrast</string>
    <string name="sensor_panel_exposure">Exposure</string>
    <string name="sensor_panel_white_balance">AWB</string>
    <string name="tab_device">Device</string>
    <string name="tab_share">Share</string>
    <string name="tab_gallery">Gallery</string>
    <string name="tab_me">Setting</string>
    <string name="double_tap_to_exit">Press again to exit the key</string>
    <string name="live_preview">Live preview</string>
    <string name="dialog_return">Return</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_tips">Tips</string>
    <string name="fail_to_play">Play failed</string>
    <string name="loading">Loading</string>
    <string name="connecting">Connecting</string>
    <string name="upgrade_desc">Update description</string>
    <string name="device_diaconnected">Device has been disconnected </string>
    <string name="input_old_pwd">Please input old password</string>
    <string name="dev_refused_access">device refused access</string>
    <string name="projection_not_support">Sorry, cast screen function can only be used in more than 5.0 mobile phone</string>
    <string name="open_wifi">would you like to open wifi?</string>
    <string name="open_gpg_tip">Application requires GPS function, please open the location service to continue.</string>
    <string name="request_location_permission">Application needs to get location information to work properly.</string>
    <string name="request_sdcard_permission">Application needs to get read and write memory to work properly.</string>
    <string name="request_contacts_permission">Application needs to get address book permission to work properly.</string>
    <string name="request_microphone_permission">Application need to get the microphone authority to work properly.</string>
    <string name="request_write_setting_permission">Application need to modify the system configuration to work properly.</string>
    <string name="grant">Grant</string>
    <string name="auto_play">No operation automatically after 10 seconds play the selected video</string>
    <string name="playback">Playback</string>
    <string name="playback_seekbar_tip_left">Left slide back to playback</string>
    <string name="playback_seekbar_tip_right">Drag the right into the preview</string>
    <string name="null_data">Data is null</string>
    <string name="thumbnail_load_fail">thumbnail load error</string>
    <string name="lock_file_tip">Is this file locked?</string>
    <string name="unlock_file_tip">Is this file unlocked?</string>
    <string name="comfirm">Confirm</string>
    <string name="language_zh_r">中文(简体)</string>
    <string name="language_zh_com">中文(繁体)</string>
    <string name="language_japanese">Japanese</string>
    <string name="language_english_us">English(United States)</string>
    <string name="language_korean">Korean</string>
    <string name="language_french">French</string>
    <string name="allow_to_save_traffic_data">Allows to save traffic data</string>
    <string name="open_debug">Open debug</string>
    <string name="time_format">Time format</string>
    <string name="format_follow_language">Follow language</string>
    <string name="remaining_storage">Remaining storage</string>
    <string name="used_storage">Used storage</string>
    <string name="unknown_device_name">Unknown device</string>
    <string name="open_video_tip">Open the video, please wait</string>
    <string name="device_media">device media</string>
    <string name="front_view">Front view</string>
    <string name="rear_view">Rear view</string>
    <string name="no_video_tip">please open video</string>
    <string name="cyc_save_video_failed">Loop save failed</string>
    <string name="no_card_take_photo_failed">take photo failed, reason : %1$s</string>
    <string name="no_card_take_photo_success">take photo success, path : %1$s</string>
    <string name="no_card_video_success">video success, file name : %1$s</string>
    <string name="no_card_video_failed">video failed, reason : %1$s</string>
    <string name="create_file_failed">create output path failed</string>
    <string name="open_rts_tip">Please open the real time stream</string>
    <string name="save_file_failed">save file failed</string>
    <string name="storage_error">Insufficient storage space</string>
    <string name="init_mov_error">Start Mov wrapper failure</string>
    <string name="take_photo_timeout">Take photo timeout</string>
    <string name="no_card_record_tip">TF card offline, recording to local？</string>
    <string name="tab_image">Photo</string>
    <string name="tab_video">Video</string>
    <string name="tab_protected">SOS</string>
    <string name="all_select">All select</string>
    <string name="cancel_all_select">Cancel All selected</string>
    <string name="selected_num">select : %1$d</string>
    <string name="selected_file_empty_tip">Please select files</string>
    <string name="device_setting">WiFi settings</string>
    <string name="app_storage_manager">Storage management</string>
    <string name="language">Language settings</string>
    <string name="save_picture_in_phone">Save the picture to the phone</string>
    <string name="auto_download_the_photo_files">Auto download the photo files</string>
    <string name="app_advanced_settings">APP advanced settings</string>
    <string name="help">Help</string>
    <string name="about_app">About</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="device_name">Recorder name</string>
    <string name="device_password">Recorder password</string>
    <string name="volume_adjustment">Volume adjustment</string>
    <string name="sound_recording">Sound recording</string>
    <string name="photo_associated_video">Photo associated video</string>
    <string name="photo_quality">Photo resolution</string>
    <string name="camera_model">Camera model</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="device_storage_manage">Recorder storage management</string>
    <string name="save">Save</string>
    <string name="switch_sta_mode">Switch STA mode</string>
    <string name="switch_ap_mode">Switch AP mode</string>
    <string name="waring_operation_tip">Will this cause the device to restart and continue?</string>
    <string name="device_name_input_limit">The name must be 1-%1$d character,chinese accounts for 2-3 characters, the current number of characters:%2$d</string>
    <string name="device_name_length_error">wifi name is to long</string>
    <string name="please_input_password">Please input new password</string>
    <string name="please_input_password_again">Please input new password again</string>
    <string name="device_volume_value">The volume of device(%1$d)</string>
    <string name="photo_qulity_value">Photo quality:%1$s</string>
    <string name="recorded_time">About to record:(%1$s)</string>
    <string name="photo_qulity_hi">200W</string>
    <string name="photo_qulity_md">100W</string>
    <string name="photo_qulity_lo">30W</string>
    <string name="full_screeen_mode">"Full screen mode(16:9)"</string>
    <string name="width_screen_mode">Wide screen mode(2.4:1)</string>
    <string name="total_capacity">Total capacity</string>
    <string name="rest_capacity">Rest capacity</string>
    <string name="rest_photo_accout">Most current  photos is %1$d , most also can store %2$d card</string>
    <string name="rest_video_accout">Most current video is  %1$d, most also can store %2$d</string>
    <string name="storage_path">Storage url</string>
    <string name="storage_size">Storage size</string>
    <string name="clean_cache">Clear cache</string>
    <string name="format">Format</string>
    <string name="clean_cache_content">Are you sure clean cache?</string>
    <string name="parking_monitoring">Parking monitoring</string>
    <string name="time_the_watermark">Time the watermark</string>
    <string name="boot_prompt">Boot sound</string>
    <string name="picture_flip">Picture flip</string>
    <string name="collision_induction_sensitivity">Collision induction sensitivity</string>
    <string name="after_parking_video_length">After parking video length</string>
    <string name="open">Open</string>
    <string name="low">low</string>
    <string name="mid">middle</string>
    <string name="hig">high</string>
    <string name="shutdown">Shut down</string>
    <string name="hour">%1$sHour</string>
    <string name="time_chose_tip">Choose the length, when parking at the time automatically shutdown, thus protecting the vehicle battery</string>
    <string name="check_app_upgrade">check for update</string>
    <string name="upload_firmware">Upload firmware</string>
    <string name="uploading">Uploading</string>
    <string name="upload_failed">Upload failed</string>
    <string name="nearby_device">Near recorders</string>
    <string name="device_wifi_ssid">Device Wifi</string>
    <string name="device_wifi_pwd">Wifi password</string>
    <string name="add">Add Device</string>
    <string name="connected_wifi_tip">Connect Wifi[%1$s] successfully</string>
    <string name="saved">Saved</string>
    <string name="wifi_pwd_length_not_allow">Password is at least 8 digits</string>
    <string name="wifi_pwd_not_empty">Password can not be blank</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_step_1">Connect to the internet</string>
    <string name="upgrade_step_2">Download the upgrade package to your phone</string>
    <string name="upgrade_step_3">Connect the device</string>
    <string name="upgrade_step_4">Upload upgrade package to device</string>
    <string name="upgrade_step_5">The device is being upgraded, do not power off</string>
    <string name="upgrade_step_6">Update completed</string>
    <string name="upgrade_step_7">Upgrade APK</string>
    <string name="executing_step">executing：%1$s</string>
    <string name="latest_version">This is the latest version</string>
    <string name="firmware_upgrade_tip">Firmware version is updated</string>
    <string name="current_version">current version：%1$s</string>
    <string name="upgrade_version">updated version：%1$s</string>
    <string name="upgrade_failed_tip">Upgrade failed, please check the network</string>
    <string name="dev_gallery">Device gallery</string>
    <string name="no_data_tip">There is currently no data</string>
    <string name="no_more_data">No more data</string>
    <string name="enter_sta_wifi_msg_tip">Please enter the network information you need to connect</string>
    <string name="save_station_msg">Save the above information to the device</string>
    <string name="submit">Submit</string>
    <string name="wifi">Wi-Fi</string>
    <string name="password">Password</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="device_connected_hot_spot">The device is connected to the network</string>
    <string name="back_to_search">Back to search</string>
</resources>