<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jieli.stream.dv.gdxxx.ui.fragment.settings.DeviceStaModeFragment"
    android:background="@color/text_white">

    <RelativeLayout
        android:id="@+id/switch_sta_top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/bg_video_state">

        <Button
            android:id="@+id/switch_sta_return_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@color/background_transparent"
            android:onClick="returnBtnClick"
            android:padding="4dp"
            android:drawableStart="@drawable/ic_return_press"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:id="@+id/device_setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/switch_sta_mode"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_normal_inc"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/wifi_msg_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_sta_top_layout"
        android:layout_margin="10dp"
        android:text="@string/enter_sta_wifi_msg_tip"
        android:textSize="@dimen/text_small"/>

    <RelativeLayout
        android:id="@+id/wifi_msg_ssid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_msg_tip"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/dbg_edit_shape">
       <EditText
           android:id="@+id/edit_wifi_ssid"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="text"
           android:hint="@string/wifi"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wifi_msg_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_msg_ssid_layout"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:background="@drawable/dbg_edit_shape">

        <ImageView
            android:id="@+id/show_or_hide_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_hide_pwd"/>

        <EditText
            android:id="@+id/edit_wifi_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/show_or_hide_pwd"
            android:maxLines="63"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/save_sta_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wifi_msg_pwd_layout"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/save_station_msg"
        android:textColor="@color/text_black"
        android:textSize="@dimen/text_smaller_x"
        android:checked="true"/>

    <Button
        android:id="@+id/switch_sta_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_sta_msg"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:textColor="@color/text_white"
        android:background="@drawable/drawable_btn_bg"/>

</RelativeLayout>
