<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">

    <RelativeLayout
        android:id="@+id/add_dev_top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@color/bg_video_state">
        <ImageView
            android:id="@+id/add_dev_return_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:src="@drawable/ic_return_press"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/company"/>
        <TextView
            android:id="@+id/add_dev_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:text="@string/nearby_device"
            android:textColor="@color/text_white"
            android:textSize="@dimen/text_normal_inc"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:id="@+id/add_dev_refresh_btn"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_refresh"
            android:contentDescription="@string/company"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/add_dev_wifi_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/add_dev_top_layout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:background="@color/text_white">

        <TextView
            android:id="@+id/add_dev_wifi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="@dimen/text_normal"
            android:hint="@string/device_wifi_ssid"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/add_dev_password_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="4dp"
                android:src="@mipmap/ic_password"
                android:contentDescription="@string/company"/>
            <TextView
                android:id="@+id/add_dev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/add"
                android:textSize="@dimen/text_normal"
                android:textColor="@color/text_white"
                android:background="@drawable/btn_bg_blue"/>
            <EditText
                android:id="@+id/add_dev_wifi_pwd_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/add_dev_btn"
                android:layout_toRightOf="@+id/add_dev_password_icon"
                android:inputType="textPassword"
                android:hint="@string/device_wifi_pwd" />
        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:id="@+id/add_dev_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/add_dev_wifi_msg_layout"
        android:background="@color/text_white"/>

</RelativeLayout>
